Lagt til og kjørt ktlint (#368)